--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".decoration.ChooseCityActivity"></activity>
+        <activity android:name=".animator.AnimatorActivity"></activity>
+        <activity android:name=".decoration.ChooseCityActivity" />
         <activity android:name=".inflate.TestInflateActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
